# api-text-tone

./: .env  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  script_db.py
app/: routers.py  schemas.py
app/auth/: database.py  manager.py  models.py  strategy.py
app/templates/: authorization.html  authorized_page.html  base.html  purchase_failed.html  purchase_superuser.html  registration.html  user_profile.html
migrations/: env.py
migrations/versions/: 012bbd601362_init_db.py
ml/: model.py
tests/: conftest.py  test_app.py  test_ml.py
